[package]
name = "rust_libraries"
version = "0.1.0"
authors = ["htlsne <htlsne23@gmail.com>"]

[[bin]]
name = "number_theory"
path = "src/number_theory.rs"

[[bin]]
name = "modulo"
path = "src/modulo.rs"

[[bin]]
name = "graph"
path = "src/graph.rs"

[[bin]]
name = "iter"
path = "src/iter.rs"

[[bin]]
name = "max_flow"
path = "src/max_flow.rs"

[dependencies]
